tests/typing/errors/overlapping_parallel_binding/let.smt2
(set-logic ALL)
(assert (let ((x 1) (x 2)) (= x 0)))
(check-sat)
(exit)
